# Bug_Amelioration_Routine

./: .gitignore  README.md
backend/: config.py  main.py  pyproject.toml
backend/apps/dev_user/: routes.py
backend/apps/tracker/: models.py  routes.py
backend/apps/users/: models.py  routes.py
frontend/: package-lock.json  package.json
frontend/mockups/: component_mockup.html
frontend/public/: index.html
frontend/src/: App.js  LoginForm.js  Titlebar.js  User.js  adapters.js  index.js  themes.jsx
frontend/src/Components/: Footer.jsx  Titlebar.jsx
frontend/src/Components/Main/: Bug.jsx  BugLog.jsx  CodeBlock.jsx  Main.jsx
frontend/src/Components/Titlebar/: LoginForm.js  LoginForm.jsx  LoginModal.js  LoginModal.jsx  LogoutBttn.jsx  RegForm.jsx  Titlebar.js  Titlebar.jsx  User.js  UserBox.jsx
frontend/src/Components/UserBox/: LoginForm.jsx  LoginModal.jsx  LogoutBttn.jsx  RegistrationForm.jsx  UserBox.jsx
frontend/src/components/control/: DiffuseLoginStatus.jsx  Footer.jsx  Homepage.jsx  Main.jsx  Titlebar.jsx
frontend/src/components/control/BugEditor/: Editor.jsx  Fixer.jsx  Logger.jsx
frontend/src/components/control/BugLog/: Bug.jsx  BugCode.jsx  BugLog.jsx  CodeBlock.jsx
frontend/src/components/control/userBox/: AuthModal.jsx  LoginForm.jsx  RegistrationForm.jsx  UserBox.jsx
frontend/src/components/style/: FooterStyles.jsx  Header.jsx  HomepageStyles.jsx  MainStyles.jsx  TitlebarStyles.jsx
frontend/src/components/style/BugEditor/: BugEditorStyles.jsx
frontend/src/components/style/BugLog/: BugLogStyles.jsx  BugStyles.jsx  (+1 more)
(+3 files in other folders)
